// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`chat log agent attachment 1`] = `
.c0 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  top: 8.571428571428571rem;
  left: 0;
  right: 0;
}

<div
  class="chatLogContainer"
>
  <div
    aria-live="polite"
    role="log"
  >
    <div
      class="container"
    >
      <div
        class="nameNoAvatar"
      >
        Agent McAgent
      </div>
      <div
        class="wrapper"
      >
        <div
          class="message messageAgent"
        >
          <div>
            <div
              class="container"
            >
              <div
                class="spinner"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c0"
  />
</div>
`;

exports[`chat log agent join 1`] = `
.c0 {
  text-align: center;
  margin-top: 0.35714285714285715rem;
  margin-bottom: 0.7142857142857143rem;
  color: #68737d;
}

.c1 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  top: 8.571428571428571rem;
  left: 0;
  right: 0;
}

<div
  class="chatLogContainer"
>
  <div
    aria-live="polite"
    role="log"
  >
    <div
      class="c0"
      data-testid="chat-msg-event"
    >
      Agent McAgent joined the chat
    </div>
  </div>
  <div
    class="c1"
  />
</div>
`;

exports[`chat log agent member leave with disconnection reason 1`] = `
.c0 {
  text-align: center;
  margin-top: 0.35714285714285715rem;
  margin-bottom: 0.7142857142857143rem;
  color: #68737d;
}

.c1 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  top: 8.571428571428571rem;
  left: 0;
  right: 0;
}

<div
  class="chatLogContainer"
>
  <div
    aria-live="polite"
    role="log"
  >
    <div
      class="c0"
      data-testid="chat-msg-event"
    >
      Mugen joined the chat
    </div>
    <div
      class="c0"
      data-testid="chat-msg-event"
    >
      Mugen was disconnected and has left the chat
    </div>
  </div>
  <div
    class="c1"
  />
</div>
`;

exports[`chat log agent member leave with non-disconnection reason 1`] = `
.c0 {
  text-align: center;
  margin-top: 0.35714285714285715rem;
  margin-bottom: 0.7142857142857143rem;
  color: #68737d;
}

.c1 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  top: 8.571428571428571rem;
  left: 0;
  right: 0;
}

<div
  class="chatLogContainer"
>
  <div
    aria-live="polite"
    role="log"
  >
    <div
      class="c0"
      data-testid="chat-msg-event"
    >
      Mugen joined the chat
    </div>
    <div
      class="c0"
      data-testid="chat-msg-event"
    >
      Mugen left the chat
    </div>
  </div>
  <div
    class="c1"
  />
</div>
`;

exports[`chat log agent message 1`] = `
.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  display: inline-block;
  white-space: pre-wrap;
  word-wrap: break-word !important;
  border-radius: 1.1428571428571428rem;
  line-height: 1.1428571428571428rem;
  padding: 0.5714285714285714rem 0.8571428571428571rem;
  max-width: 17.5rem;
  background-color: #e9ebed;
  max-width: 15.642857142857142rem !important;
}

.c2 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  top: 8.571428571428571rem;
  left: 0;
  right: 0;
}

<div
  class="chatLogContainer"
>
  <div
    aria-live="polite"
    role="log"
  >
    <div
      class="container"
    >
      <div
        class="nameNoAvatar"
      >
        Random display name
      </div>
      <div
        class="wrapper"
      >
        <div
          class="message messageAgent"
        >
          <div
            class="defaultMessageContainer"
          >
            <div
              class="c0"
              data-testid="chat-msg-agent"
            >
              <div
                class="c1"
              >
                <span
                  class=""
                >
                  <span
                    class="Linkify"
                  >
                    blah blah
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c2"
  />
</div>
`;

exports[`chat log agent stopped typing 1`] = `
.c0 {
  text-align: center;
  margin-top: 0.35714285714285715rem;
  margin-bottom: 0.7142857142857143rem;
  color: #68737d;
}

.c1 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  top: 8.571428571428571rem;
  left: 0;
  right: 0;
}

<div
  class="chatLogContainer"
>
  <div
    aria-live="polite"
    role="log"
  >
    <div
      class="c0"
      data-testid="chat-msg-event"
    >
      Mr F joined the chat
    </div>
  </div>
  <div
    class="c1"
  />
</div>
`;

exports[`chat log agent typing 1`] = `
.c3 {
  color: inherit;
}

.c3 .c4 {
  opacity: 0.2;
}

.c3 .c4:nth-child(1) {
  -webkit-animation: dQzvEH 1s infinite;
  animation: dQzvEH 1s infinite;
  -webkit-animation-delay: 0.4s;
  animation-delay: 0.4s;
}

.c3 .c4:nth-child(2) {
  -webkit-animation: dQzvEH 1s infinite;
  animation: dQzvEH 1s infinite;
  -webkit-animation-delay: 0.2s;
  animation-delay: 0.2s;
}

.c3 .c4:nth-child(3) {
  -webkit-animation: dQzvEH 1s infinite;
  animation: dQzvEH 1s infinite;
  -webkit-animation-delay: unset;
  animation-delay: unset;
}

.c0 {
  text-align: center;
  margin-top: 0.35714285714285715rem;
  margin-bottom: 0.7142857142857143rem;
  color: #68737d;
}

.c2 {
  color: #87929d !important;
  vertical-align: middle;
  height: 1.4rem !important;
  width: 1.4rem !important;
  padding-bottom: 0.14285714285714285rem;
  margin-right: 0.35714285714285715rem;
}

.c1 {
  width: 100%;
  padding-top: 0.8571428571428571rem;
  padding-bottom: 0.42857142857142855rem;
  color: #68737d;
}

.c5 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  top: 8.571428571428571rem;
  left: 0;
  right: 0;
}

<div
  class="chatLogContainer"
>
  <div
    aria-live="polite"
    role="log"
  >
    <div
      class="c0"
      data-testid="chat-msg-event"
    >
      Mr F joined the chat
    </div>
  </div>
  <div
    aria-live="polite"
  >
    <div
      class="c1"
    >
      <svg
        class="c2 c3"
        color="inherit"
        data-garden-id="loaders.inline"
        data-garden-version="8.9.0"
        data-testid="Icon--ellipsis"
        height="4"
        size="16"
        viewBox="0 0 16 4"
        width="16"
      >
        <circle
          class="c4 "
          cx="14"
          cy="2"
          fill="currentColor"
          r="2"
        />
        <circle
          class="c4 "
          cx="8"
          cy="2"
          fill="currentColor"
          r="2"
        />
        <circle
          class="c4 "
          cx="2"
          cy="2"
          fill="currentColor"
          r="2"
        />
      </svg>
      Mr F is typing
    </div>
  </div>
  <div
    class="c5"
  />
</div>
`;

exports[`chat log comment 1`] = `
.c0 {
  text-align: center;
  margin-top: 0.35714285714285715rem;
  margin-bottom: 0.7142857142857143rem;
  color: #68737d;
}

.c1 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  top: 8.571428571428571rem;
  left: 0;
  right: 0;
}

<div
  class="chatLogContainer"
>
  <div
    aria-live="polite"
    role="log"
  >
    <div
      class="c0"
      data-testid="chat-msg-event"
    >
      Comment submitted
    </div>
  </div>
  <div
    class="c1"
  />
</div>
`;

exports[`chat log member join 1`] = `
.c0 {
  text-align: center;
  margin-top: 0.35714285714285715rem;
  margin-bottom: 0.7142857142857143rem;
  color: #68737d;
}

.c1 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  top: 8.571428571428571rem;
  left: 0;
  right: 0;
}

<div
  class="chatLogContainer"
>
  <div
    aria-live="polite"
    role="log"
  >
    <div
      class="c0"
      data-testid="chat-msg-event"
    >
      Chat started
    </div>
  </div>
  <div
    class="c1"
  />
</div>
`;

exports[`chat log member leave 1`] = `
.c0 {
  text-align: center;
  margin-top: 0.35714285714285715rem;
  margin-bottom: 0.7142857142857143rem;
  color: #68737d;
}

.c1 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  top: 8.571428571428571rem;
  left: 0;
  right: 0;
}

<div
  class="chatLogContainer"
>
  <div
    aria-live="polite"
    role="log"
  >
    <div
      class="c0"
      data-testid="chat-msg-event"
    >
      Mugen joined the chat
    </div>
    <div
      class="c0"
      data-testid="chat-msg-event"
    >
      Mugen left the chat
    </div>
  </div>
  <div
    class="c1"
  />
</div>
`;

exports[`chat log queue position 1`] = `
.c1 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  top: 8.571428571428571rem;
  left: 0;
  right: 0;
}

.c0 {
  text-align: center !important;
  margin-top: 0.35714285714285715rem;
  margin-bottom: 0.7142857142857143rem;
  color: #68737d;
}

<div
  class="chatLogContainer"
>
  <div
    aria-live="polite"
    class="c0"
    role="status"
  >
    Queue position: 3
  </div>
  <div
    class="c1"
  />
</div>
`;

exports[`chat log rating 1`] = `
.c0 {
  text-align: center;
  margin-top: 0.35714285714285715rem;
  margin-bottom: 0.7142857142857143rem;
  color: #68737d;
}

.c1 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  top: 8.571428571428571rem;
  left: 0;
  right: 0;
}

<div
  class="chatLogContainer"
>
  <div
    aria-live="polite"
    role="log"
  >
    <div
      class="c0"
      data-testid="chat-msg-event"
    >
      Chat rated Good
    </div>
  </div>
  <div
    class="c1"
  />
</div>
`;

exports[`chat log series of actions 1`] = `
.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: inline-block;
  white-space: pre-wrap;
  word-wrap: break-word !important;
  border-radius: 1.1428571428571428rem;
  line-height: 1.1428571428571428rem;
  padding: 0.5714285714285714rem 0.8571428571428571rem;
  max-width: 17.5rem;
  background-color: #1F73B7 !important;
}

.c2,
.c2 a {
  color: #FFFFFF !important;
}

.c3 {
  display: inline-block;
  white-space: pre-wrap;
  word-wrap: break-word !important;
  border-radius: 1.1428571428571428rem;
  line-height: 1.1428571428571428rem;
  padding: 0.5714285714285714rem 0.8571428571428571rem;
  max-width: 17.5rem;
  background-color: #e9ebed;
  max-width: 15.642857142857142rem !important;
}

.c0 {
  text-align: center;
  margin-top: 0.35714285714285715rem;
  margin-bottom: 0.7142857142857143rem;
  color: #68737d;
}

.c4 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  top: 8.571428571428571rem;
  left: 0;
  right: 0;
}

<div
  class="chatLogContainer"
>
  <div
    aria-live="polite"
    role="log"
  >
    <div
      class="c0"
      data-testid="chat-msg-event"
    >
      Chat started
    </div>
    <div
      class="container"
    >
      <div
        class="wrapper"
      >
        <div
          class="message messageUser"
        >
          <div
            class="defaultMessageContainer"
          >
            <span
              class="container sentIndicator Icon--mini-tick"
              data-testid="Icon--mini-tick"
              type="Icon--mini-tick"
            >
              <svg
                aria-hidden="true"
                realfilename="check-sm-stroke.svg"
              />
            </span>
            <div
              class="c1"
              data-testid="chat-msg-user"
            >
              <div
                class="c2"
              >
                <span
                  class=""
                >
                  <span
                    class="Linkify"
                  >
                    Hi
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0"
      data-testid="chat-msg-event"
    >
      Jet joined the chat
    </div>
    <div
      class="container"
    >
      <div
        class="nameNoAvatar"
      >
        Jet
      </div>
      <div
        class="wrapper"
      >
        <div
          class="message messageAgent"
        >
          <div>
            <div
              class="container"
            >
              <div
                class="spinner"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="wrapper"
      >
        <div
          class="message messageAgent"
        >
          <div
            class="defaultMessageContainer"
          >
            <div
              class="c1"
              data-testid="chat-msg-agent"
            >
              <div
                class="c3"
              >
                <span
                  class=""
                >
                  <span
                    class="Linkify"
                  >
                    blah blah
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0"
      data-testid="chat-msg-event"
    >
      Chat rated Good
    </div>
    <div
      class="c0"
      data-testid="chat-msg-event"
    >
      Jet left the chat
    </div>
  </div>
  <div
    class="c4"
  />
</div>
`;

exports[`chat log visitor message account settings login enabled displays update info if visitor info is not available 1`] = `
.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  display: inline-block;
  white-space: pre-wrap;
  word-wrap: break-word !important;
  border-radius: 1.1428571428571428rem;
  line-height: 1.1428571428571428rem;
  padding: 0.5714285714285714rem 0.8571428571428571rem;
  max-width: 17.5rem;
  background-color: #1F73B7 !important;
}

.c1,
.c1 a {
  color: #FFFFFF !important;
}

.c2 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  top: 8.571428571428571rem;
  left: 0;
  right: 0;
}

<div
  class="chatLogContainer"
>
  <div
    aria-live="polite"
    role="log"
  >
    <div
      class="container"
    >
      <div
        class="wrapper"
      >
        <div
          class="message messageUser"
        >
          <div
            class="defaultMessageContainer"
          >
            <div
              class="c0"
              data-testid="chat-msg-user"
            >
              <div
                class="c1"
              >
                <span
                  class=""
                >
                  <span
                    class="Linkify"
                  >
                    Hi
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        class="updateInfo"
      >
        Please update your info
      </button>
    </div>
  </div>
  <div
    class="c2"
  />
</div>
`;

exports[`chat log visitor message account settings login enabled displays update info if visitor name is default 1`] = `
.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  display: inline-block;
  white-space: pre-wrap;
  word-wrap: break-word !important;
  border-radius: 1.1428571428571428rem;
  line-height: 1.1428571428571428rem;
  padding: 0.5714285714285714rem 0.8571428571428571rem;
  max-width: 17.5rem;
  background-color: #1F73B7 !important;
}

.c1,
.c1 a {
  color: #FFFFFF !important;
}

.c2 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  top: 8.571428571428571rem;
  left: 0;
  right: 0;
}

<div
  class="chatLogContainer"
>
  <div
    aria-live="polite"
    role="log"
  >
    <div
      class="container"
    >
      <div
        class="wrapper"
      >
        <div
          class="message messageUser"
        >
          <div
            class="defaultMessageContainer"
          >
            <div
              class="c0"
              data-testid="chat-msg-user"
            >
              <div
                class="c1"
              >
                <span
                  class=""
                >
                  <span
                    class="Linkify"
                  >
                    Hi
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        class="updateInfo"
      >
        Please update your info
      </button>
    </div>
  </div>
  <div
    class="c2"
  />
</div>
`;

exports[`chat log visitor message account settings login enabled does not display update info if visitor email is already set 1`] = `
.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  display: inline-block;
  white-space: pre-wrap;
  word-wrap: break-word !important;
  border-radius: 1.1428571428571428rem;
  line-height: 1.1428571428571428rem;
  padding: 0.5714285714285714rem 0.8571428571428571rem;
  max-width: 17.5rem;
  background-color: #1F73B7 !important;
}

.c1,
.c1 a {
  color: #FFFFFF !important;
}

.c2 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  top: 8.571428571428571rem;
  left: 0;
  right: 0;
}

<div
  class="chatLogContainer"
>
  <div
    aria-live="polite"
    role="log"
  >
    <div
      class="container"
    >
      <div
        class="wrapper"
      >
        <div
          class="message messageUser"
        >
          <div
            class="defaultMessageContainer"
          >
            <div
              class="c0"
              data-testid="chat-msg-user"
            >
              <div
                class="c1"
              >
                <span
                  class=""
                >
                  <span
                    class="Linkify"
                  >
                    Hi
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c2"
  />
</div>
`;

exports[`chat log visitor message account settings login enabled does not display update info if visitor name is already set 1`] = `
.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  display: inline-block;
  white-space: pre-wrap;
  word-wrap: break-word !important;
  border-radius: 1.1428571428571428rem;
  line-height: 1.1428571428571428rem;
  padding: 0.5714285714285714rem 0.8571428571428571rem;
  max-width: 17.5rem;
  background-color: #1F73B7 !important;
}

.c1,
.c1 a {
  color: #FFFFFF !important;
}

.c2 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  top: 8.571428571428571rem;
  left: 0;
  right: 0;
}

<div
  class="chatLogContainer"
>
  <div
    aria-live="polite"
    role="log"
  >
    <div
      class="container"
    >
      <div
        class="wrapper"
      >
        <div
          class="message messageUser"
        >
          <div
            class="defaultMessageContainer"
          >
            <div
              class="c0"
              data-testid="chat-msg-user"
            >
              <div
                class="c1"
              >
                <span
                  class=""
                >
                  <span
                    class="Linkify"
                  >
                    Hi
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c2"
  />
</div>
`;

exports[`chat log visitor message failure 1`] = `
.c2 {
  position: relative;
  border: 1px solid;
  border-radius: 4px;
  padding: 20px 40px 20px 50px;
  line-height: 1.4285714285714286;
  font-size: 14px;
  border-color: #f5b5ba;
  background-color: #fff0f1;
  color: #8c232c;
}

.c2 .c5 {
  color: #681219;
}

.c3 {
  position: absolute;
  left: 24px;
  margin-top: 2px;
  color: #cc3340;
}

.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  display: inline-block;
  white-space: pre-wrap;
  word-wrap: break-word !important;
  border-radius: 1.1428571428571428rem;
  line-height: 1.1428571428571428rem;
  padding: 0.5714285714285714rem 0.8571428571428571rem;
  max-width: 17.5rem;
  background-color: #1F73B7 !important;
}

.c1,
.c1 a {
  color: #FFFFFF !important;
}

.c4 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  top: 8.571428571428571rem;
  left: 0;
  right: 0;
}

<div
  class="chatLogContainer"
>
  <div
    aria-live="polite"
    role="log"
  >
    <div
      class="container"
    >
      <div
        class="wrapper"
      >
        <div
          class="message messageUser"
        >
          <div>
            <div
              class="c0"
              data-testid="chat-msg-user"
            >
              <div
                class="c1"
              >
                <span
                  class=""
                >
                  <span
                    class="Linkify"
                  >
                    Hi
                  </span>
                </span>
              </div>
            </div>
            <div
              class="messageErrorContainer"
            >
              <div
                class="container c2"
                data-garden-id="notifications.alert"
                data-garden-version="8.9.0"
                role="alert"
                type="error"
              >
                <svg
                  class="c3"
                  focusable="false"
                  height="16"
                  hue="dangerHue"
                  role="presentation"
                  theme="[object Object]"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                  >
                    <circle
                      cx="7.5"
                      cy="8.5"
                      r="7"
                    />
                    <path
                      d="M7.5 4.5V9"
                      stroke-linecap="round"
                    />
                  </g>
                  <circle
                    cx="7.5"
                    cy="12"
                    fill="currentColor"
                    r="1"
                  />
                </svg>
                <button
                  class="messageErrorLink "
                >
                  Resend
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c4"
  />
</div>
`;

exports[`chat log visitor message success 1`] = `
.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  display: inline-block;
  white-space: pre-wrap;
  word-wrap: break-word !important;
  border-radius: 1.1428571428571428rem;
  line-height: 1.1428571428571428rem;
  padding: 0.5714285714285714rem 0.8571428571428571rem;
  max-width: 17.5rem;
  background-color: #1F73B7 !important;
}

.c1,
.c1 a {
  color: #FFFFFF !important;
}

.c2 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  top: 8.571428571428571rem;
  left: 0;
  right: 0;
}

<div
  class="chatLogContainer"
>
  <div
    aria-live="polite"
    role="log"
  >
    <div
      class="container"
    >
      <div
        class="wrapper"
      >
        <div
          class="message messageUser"
        >
          <div
            class="defaultMessageContainer"
          >
            <span
              class="container sentIndicator Icon--mini-tick"
              data-testid="Icon--mini-tick"
              type="Icon--mini-tick"
            >
              <svg
                aria-hidden="true"
                realfilename="check-sm-stroke.svg"
              />
            </span>
            <div
              class="c0"
              data-testid="chat-msg-user"
            >
              <div
                class="c1"
              >
                <span
                  class=""
                >
                  <span
                    class="Linkify"
                  >
                    Hi
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c2"
  />
</div>
`;

exports[`update chat header 1`] = `
.c6 {
  margin: 6px;
}

.c5 {
  -webkit-transition: opacity 10ms;
  transition: opacity 10ms;
  opacity: 1;
}

.c5[aria-hidden='true'] {
  visibility: hidden;
  opacity: 0;
}

.c3 {
  display: inline-block;
}

.c0 {
  color: #2f3941;
  line-height: 1.1428571428571428rem;
  padding-top: 0.07142857142857142rem;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0;
  padding-left: 12px;
}

.c2 > div {
  display: block;
}

.c1 {
  font-weight: 700;
  font-size: 1rem;
  width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  display: -webkit-box;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
}

.c4 {
  width: 100%;
  margin-top: 0.07142857142857142rem;
  overflow: hidden;
  display: -webkit-box;
  text-overflow: ellipsis;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 2;
}

<div
  class="c0"
  data-testid="chat-header-text-container"
>
  <h2
    class="c1"
    data-testid="chat-header-title"
  >
    Mr F
  </h2>
  <div
    class="c2"
  >
    <div
      class="c3"
    >
      <div
        aria-describedby="1114val-tooltip_0.5.4"
        class="c4"
        data-garden-container-id="containers.tooltip"
        data-garden-container-version="0.5.4"
        data-testid="chat-header-subtext"
        tabindex="-1"
      >
        Mistah J
      </div>
    </div>
    <div
      aria-hidden="true"
      class="c5"
      style="position: absolute; top: 0px; left: 0px; opacity: 0; pointer-events: none;"
    >
      <div
        aria-hidden="true"
        class="index__c-tooltip___3EGHJ index__c-tooltip--medium___K7htT c6"
        data-garden-id="tooltip.tooltip"
        data-garden-version="7.1.10"
        id="1114val-tooltip_0.5.4"
        role="tooltip"
        style="display: block;"
      >
        Mistah J
      </div>
    </div>
  </div>
</div>
`;
